# Resursmodell

./: .gitignore  CLAUDE.md
backend/: .env.example  pyproject.toml
backend/app/: auth.py  config.py  database.py  db_models.py  main.py  models.py
backend/app/routes/: auth.py  calculate.py  plans.py  upload.py
backend/app/services/: calculator.py  csv_parser.py
data/: example_v2.csv
docs/: calcutation.md  sample_data.csv  spec.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: AuthGuard.tsx  Navbar.tsx
frontend/src/components/plans/: PlanSelector.tsx  SavePlanDialog.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ComparisonPage.tsx  LandingPage.tsx  LoginPage.tsx  ParametersPage.tsx  SummaryPage.tsx  TablesPage.tsx
frontend/src/store/: authStore.ts  dataStore.ts
frontend/src/types/: index.ts
